# OpenCraw

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  FOUNDATION_GATES.md  README.md  config.example.toml  config.imessage.local.toml  config.local.toml  deny.toml  docker-compose.yml
.cargo/: config.toml.example
.github/workflows/: rust-ci.yml
config-templates/: README.md  config.toml
config-templates/configs/: channel-discord.toml  channel-email.toml  channel-external-plugins.toml  channel-imessage.toml  channel-linear.toml  channel-matrix.toml  channel-signal.toml  channel-slack.toml  channel-telegram.toml  channel-whatsapp.toml  keys.toml
contracts/: README.md
contracts/gmail/: README.md
contracts/linear/: README.md  directives.json  enum-types.json  input-objects.json  introspection-full.json  mutation-fields.json  query-fields.json  scalars.json  schema-metadata.json  state-related-enums.json
docs/: README.md
docs/adr/: 0000-template.md  README.md
docs/process/: services-runbook.md
docs/process/parallel-agents/: 00-COORDINATION.md  00-INTEGRATION-REQUESTS.md  00-RUNBOOK.md
docs/product/: feature-inventory.md  operating-model.md  parity-master-plan.md
guides/: README.md  email.md  imessage.md  linear.md  telegram.md
guides/channel-setup/: email-linear.md  imessage-telegram.md
os-app/: Cargo.toml
os-app/src/: assistant.rs  automation_runtime.rs  channel_plugins.rs  commands.rs  config.rs  config_control.rs  dev_backends.rs  discovery_runtime.rs  feedback.rs  gateway.rs  http_auth.rs  init.rs  main.rs  memory.rs  pairing.rs  server.rs  session.rs  setup.rs  skills_runtime.rs
os-app/src/routes/: automation.rs  channels.rs  config.rs  health.rs  memory.rs  messages.rs  mod.rs  sessions.rs  skills.rs
os-channels/: Cargo.toml
os-channels/src/: discord.rs  email.rs  http_plugin.rs  imessage.rs  lib.rs  linear.rs  matrix.rs  signal.rs  slack.rs  telegram.rs  traits.rs  types.rs  webchat.rs  whatsapp.rs
os-llm/: Cargo.toml
os-llm/src/: anthropic.rs  client.rs  error.rs  lib.rs  openai.rs  types.rs
os-tools/: Cargo.toml
os-tools/src/: apply_patch.rs  browser.rs  clipboard.rs  email.rs  error.rs  filesystem.rs  imessage.rs  lib.rs  linear.rs  shell.rs  traits.rs
plans/: 00-index.md  01-system-audit.md  02-parity-gap-matrix.md  03-target-architecture.md  04-implementation-roadmap.md  05-work-backlog.md  06-source-log.md  07-openclaw-style-guide.md  08-opencraw-creek-visual-redesign-plan.md  09-channel-setup-imessage-telegram.md  10-control-ui-plan.md  11-email-usage-guide.md  12-linear-usage-guide.md  13-webchat-usage-guide.md  14-imessage-usage-guide.md  15-telegram-usage-guide.md
scripts/: check-linear-contracts.sh  ci-rust-latest-deps.sh  ci-rust-security.sh  ci-rust.sh  compose.sh  dev.sh  fetch-gmail-contracts.sh  fetch-linear-contracts.sh  populate-linear-config.sh  refresh-gmail-access-token.sh
scripts/parity/: check-tier-certification.sh  collect-tier-evidence.sh
specs/: README.md
specs/adr/: README.md
specs/foundation/: agent-guardrails-contract.md  doc-taxonomy-and-lifecycle.md  verification-evidence-contract.md
specs/parity/: openclaw-feature-inventory-canonical.md
specs/platform/: horizons-api-master-contract.md
standards/: README.md  foundation-gates.md  rust-toolchain-policy.md  rust.md  verification-governance.md
tests/parity/: smoke-certification-harness.sh
web/: README.md  index.html  package.json
web/scripts/: dev.ts
web/src/: App.css  App.tsx  env.d.ts  index.css
