[workspace]
resolver = "2"
members = [
    "os-llm",
    "os-tools",
    "os-channels",
    "os-app",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
horizons_core = { path = "../Horizons/horizons_core", default-features = false, features = ["memory", "optimization", "evaluation"] }
# Code imports this as `horizons_rs`, but in the checked-out Horizons repo the server crate is
# named `horizons_server` (feature set: `all`).
horizons_rs = { package = "horizons_server", path = "../Horizons/horizons_server", default-features = false, features = ["all"] }
horizons_graph = { path = "../Horizons/horizons_graph" }
mipro_v2 = { path = "../Horizons/mipro_v2" }

anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
axum = { version = "0.8", features = ["macros", "json", "ws"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.15", features = ["v4", "serde"] }
ulid = { version = "1", features = ["serde"] }
rusqlite = "0.32"
