[workspace]
resolver = "2"
members = [
    "os-llm",
    "os-tools",
    "os-channels",
    "os-app",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
horizons_core = { git = "https://github.com/synth-laboratories/Horizons", branch = "main", default-features = false, features = ["memory", "optimization", "evaluation"] }
horizons_rs = { package = "horizons_server", git = "https://github.com/synth-laboratories/Horizons", branch = "main", default-features = false, features = ["all"] }
horizons_graph = { git = "https://github.com/synth-laboratories/Horizons", branch = "main" }
horizons_integrations = { git = "https://github.com/synth-laboratories/Horizons", branch = "main" }
mipro_v2 = { git = "https://github.com/synth-laboratories/Horizons", branch = "main" }
voyager = { git = "https://github.com/synth-laboratories/Horizons", branch = "main" }

anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
axum = { version = "0.8", features = ["macros", "json", "ws"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.15", features = ["v4", "serde"] }
ulid = { version = "1", features = ["serde"] }
dotenvy = "0.15"
rusqlite = "0.32"
