[package]
name = "os-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "opencraw"
path = "src/main.rs"

[dependencies]
os-channels = { path = "../os-channels" }
os-llm = { path = "../os-llm" }
os-tools = { path = "../os-tools" }

horizons_core = { workspace = true }
horizons_rs = { workspace = true }
horizons_graph = { workspace = true }
horizons_integrations = { workspace = true }
mipro_v2 = { workspace = true }
voyager = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cron = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
